# linkedin-api

./: .gitignore  README.md  linkedin-api.cabal  linkedin.cabal
Data/API/LinkedIn/: CompanyLookup.hs  CompanySearch.hs  Facet.hs  PeopleSearch.hs  Profile.hs  Query.hs  QueryResponsePair.hs  Response.hs
Network/API/: LinkedIn.hs  ShimToken.hs
Text/XML/Stream/Parse/: Skip.hs
